[package]
name = "bittorrent"
version = "0.1.0"
authors = ["Sampras Lopes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.5"
rust-crypto = "0.2.36"
url = "2.2.1"
reqwest = { version = "0.11.2", features = ["blocking"] }